k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk029-stock-market
spec:
  selector:
    app: sk029-stock-market
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
