k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk029-stock-market-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public-nginx
  rules:
    - host: dev-stock-market-imclaremont.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sk029-stock-market
                port:
                  number: 8085
